Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rare/Rare3.out
Rare3.java:20:8: compiler.err.improperly.formed.type.inner.raw.param
1 error
